@@ -268,9 +268,9 @@ infra_host(struct infra_cache* infra, struct sockaddr_storage* addr,
 
 /** hash lameness key */
 static hashvalue_t
-hash_lameness(uint8_t* name, size_t namelen)
+hash_lameness(uint8_t* name)
 {
-	return hashlittle(name, namelen, 0xab);
+	return dname_query_hash(name, 0xab);
 }
 
 int 
@@ -283,7 +283,7 @@ infra_lookup_lame(struct infra_host_data* host,
 	struct infra_lame_data *d;
 	if(!host->lameness)
 		return 0;
-	k.entry.hash = hash_lameness(name, namelen);
+	k.entry.hash = hash_lameness(name);
 	k.zonename = name;
 	k.namelen = namelen;
 	k.entry.key = (void*)&k;
@@ -300,6 +300,15 @@ infra_lookup_lame(struct infra_host_data* host,
 	*rlame = d->rec_lame;
 	*alame = d->lame_type_A;
 	*olame = d->lame_other;
+	if(*dlame || *rlame || *alame || *olame) {
+		/* @@@ DEBUG LAME @@@ */
+		log_info("infra_lookup_lame: looked up LAME d%d r%d a%d o%d",
+			*dlame, *rlame, *alame, *olame);
+		log_nametypeclass(0, "search", name, 0, 0);
+		log_nametypeclass(0, "found", 
+			((struct infra_lame_key*)e->key)->zonename, 0, 0);
+	}
+
 	lock_rw_unlock(&e->lock);
 	return *dlame || *rlame || *alame || *olame;
 }
@@ -375,7 +384,7 @@ infra_set_lame(struct infra_cache* infra,
 		return 0;
 	}
 	lock_rw_init(&k->entry.lock);
-	k->entry.hash = hash_lameness(name, namelen);
+	k->entry.hash = hash_lameness(name);
 	k->entry.key = (void*)k;
 	k->entry.data = (void*)d;
 	d->ttl = timenow + infra->lame_ttl;
@@ -419,6 +428,8 @@ infra_set_lame(struct infra_cache* infra,
 		int dlame, rlame, alame, olame; 
 		if(infra_lookup_lame(data, name, namelen, timenow,
 			&dlame, &rlame, &alame, &olame)) { 
+			/* @@@ DEBUG LAME ***/
+			log_info("lookup_lame merge in set_lame");
 			/* merge data into new structure */
 			if(dlame) d->isdnsseclame = 1;
 			if(rlame) d->rec_lame = 1;
@@ -526,6 +537,13 @@ infra_get_lame_rtt(struct infra_cache* infra,
 	/* check lameness first, if so, ttl on host does not matter anymore */
 	if(infra_lookup_lame(host, name, namelen, timenow, 
 		&dlm, &rlm, &alm, &olm)) {
+		/* @@@ DEBUG LAME @@@ */
+		log_info("lookup_lame in get_lame_rtt type %d", qtype);
+		log_addr(0, "for addr", addr, addrlen);
+		log_addr(0, "found addr", 
+			&((struct infra_host_key*)e->key)->addr,
+			((struct infra_host_key*)e->key)->addrlen);
+
 		if(alm && qtype == LDNS_RR_TYPE_A) {
 			lock_rw_unlock(&e->lock);
 			*lame = 1;
